--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/http": "5.0.1",
     "@angular/platform-browser": "5.0.1",
     "@angular/platform-browser-dynamic": "5.0.1",
+    "@ionic-native/contacts": "^4.4.2",
     "@ionic-native/core": "4.4.0",
     "@ionic-native/sms": "^4.4.2",
     "@ionic-native/splash-screen": "4.4.0",
@@ -31,7 +32,13 @@
     "ionicons": "3.0.0",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.18"
+    "zone.js": "0.8.18",
+    "ionic-plugin-keyboard": "~2.2.1",
+    "cordova-plugin-whitelist": "1.3.1",
+    "cordova-plugin-device": "1.1.4",
+    "cordova-plugin-splashscreen": "~4.0.1",
+    "cordova-plugin-ionic-webview": "^1.1.11",
+    "cordova-plugin-contacts": "~3.0.0"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.2",
@@ -40,7 +47,13 @@
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "cordova-sms-plugin": {}
+      "cordova-sms-plugin": {},
+      "cordova-plugin-contacts": {},
+      "ionic-plugin-keyboard": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {}
     }
   }
 }
