--- a/package.json
+++ b/package.json
@@ -26,19 +26,19 @@
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/pro": "1.0.16",
-    "@ionic/storage": "2.1.3",
+    "@ionic/storage": "^2.1.3",
+    "cordova-plugin-contacts": "~3.0.0",
+    "cordova-plugin-device": "1.1.4",
+    "cordova-plugin-ionic-webview": "^1.1.11",
+    "cordova-plugin-splashscreen": "~4.0.1",
+    "cordova-plugin-whitelist": "1.3.1",
     "cordova-sms-plugin": "^0.1.11",
     "ionic-angular": "3.9.2",
+    "ionic-plugin-keyboard": "~2.2.1",
     "ionicons": "3.0.0",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.18",
-    "ionic-plugin-keyboard": "~2.2.1",
-    "cordova-plugin-whitelist": "1.3.1",
-    "cordova-plugin-device": "1.1.4",
-    "cordova-plugin-splashscreen": "~4.0.1",
-    "cordova-plugin-ionic-webview": "^1.1.11",
-    "cordova-plugin-contacts": "~3.0.0"
+    "zone.js": "0.8.18"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.2",
